--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -2412,7 +2412,7 @@ fieldset {
     padding: 17px 20px 18px 150px; */
     float: right;
     margin-right: 20px;
-    margin-top: 4px;
+    margin-top: 8px;
 }
 /*** app info add end ***/
 
@@ -5844,7 +5844,7 @@ ul#display-inline-block-example li:nth-child(4) select, ul#display-inline-block-
 	margin-bottom:6px;
 }
 .fea_add_but {
-	margin-left:2.5%;
+	margin-left:1.5%;
 	margin-top: 20%;
 }
 .tblheader br {
@@ -6024,4 +6024,36 @@ color: #313131;
 }
 .dd-desc {
 	font-size: smaller !important;
+}
+
+/*fatures form related CSS*/
+
+.featureForm {
+ 	height: 90% !important;
+ }
+.custom_features {
+	border-radius: 12px 12px 6px 6px !important;
+    float: left;
+    height: 96% !important;
+    /*margin: 1%;*/
+	margin-left:0;
+    width: 45.8%;
+ }
+ .custom_features_wrapper_right {
+    border-radius: 12px 12px 6px 6px !important;
+    float: right;
+    height: 96% !important;
+    /*margin: 1% 1% 1% 0;*/
+    width: 45.5%;
+    overflow-x: hidden; 
+	overflow-y: auto;
+ } 
+     
+ .feature_content_adder {
+	height: 89% !important;
+	overflow-y: auto;
+	overflow-x: hidden;
+	padding-top: 0%;
+	width: 99.5%;
+	overflow-x: hidden;
 }
